fix: replace all getLast with getFirst for return stack